# server/task.go
@@ -1,288 +1,0 @@
-//go:build go1.22
-
-// Package api provides primitives to interact with the openapi HTTP API.
-//
-// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.4.1 DO NOT EDIT.
-package api
-
-import (
-	"fmt"
-	"net/http"
-	"time"
-
-	"github.com/oapi-codegen/runtime"
-)
-
-// Defines values for EventsResponseState.
-const (
-	Finished EventsResponseState = "finished"
-	Started  EventsResponseState = "started"
-)
-
-// Error defines model for Error.
-type Error struct {
-	// Message Error message
-	Message *string `json:"message,omitempty"`
-}
-
-// EventRequest defines model for EventRequest.
-type EventRequest struct {
-	// Type Event type (lowercase letters and numbers only)
-	Type string `json:"type"`
-}
-
-// EventsResponse defines model for EventsResponse.
-type EventsResponse = []struct {
-	// FinishedAt Event finish time, must be empty if state is `started`
-	FinishedAt *time.Time `json:"finishedAt,omitempty"`
-
-	// StartedAt Event start time
-	StartedAt time.Time `json:"startedAt"`
-
-	// State Event state
-	State EventsResponseState `json:"state"`
-
-	// Type Event type
-	Type string `json:"type"`
-}
-
-// EventsResponseState Event state
-type EventsResponseState string
-
-// GetV1Params defines parameters for GetV1.
-type GetV1Params struct {
-	// Offset Offset of the first event to return
-	Offset *int `form:"offset,omitempty" json:"offset,omitempty"`
-
-	// Limit Number of events to return
-	Limit *int `form:"limit,omitempty" json:"limit,omitempty"`
-
-	// Type Filter events by type
-	Type *string `form:"type,omitempty" json:"type,omitempty"`
-}
-
-// PostV1FinishJSONRequestBody defines body for PostV1Finish for application/json ContentType.
-type PostV1FinishJSONRequestBody = EventRequest
-
-// PostV1StartJSONRequestBody defines body for PostV1Start for application/json ContentType.
-type PostV1StartJSONRequestBody = EventRequest
-
-// ServerInterface represents all server handlers.
-type ServerInterface interface {
-	// Get events
-	// (GET /v1)
-	GetV1(w http.ResponseWriter, r *http.Request, params GetV1Params)
-	// Finish an existing event
-	// (POST /v1/finish)
-	PostV1Finish(w http.ResponseWriter, r *http.Request)
-	// Start a new event
-	// (POST /v1/start)
-	PostV1Start(w http.ResponseWriter, r *http.Request)
-}
-
-// ServerInterfaceWrapper converts contexts to parameters.
-type ServerInterfaceWrapper struct {
-	Handler            ServerInterface
-	HandlerMiddlewares []MiddlewareFunc
-	ErrorHandlerFunc   func(w http.ResponseWriter, r *http.Request, err error)
-}
-
-type MiddlewareFunc func(http.Handler) http.Handler
-
-// GetV1 operation middleware
-func (siw *ServerInterfaceWrapper) GetV1(w http.ResponseWriter, r *http.Request) {
-
-	var err error
-
-	// Parameter object where we will unmarshal all parameters from the context
-	var params GetV1Params
-
-	// ------------- Optional query parameter "offset" -------------
-
-	err = runtime.BindQueryParameter("form", true, false, "offset", r.URL.Query(), &params.Offset)
-	if err != nil {
-		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "offset", Err: err})
-		return
-	}
-
-	// ------------- Optional query parameter "limit" -------------
-
-	err = runtime.BindQueryParameter("form", true, false, "limit", r.URL.Query(), &params.Limit)
-	if err != nil {
-		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "limit", Err: err})
-		return
-	}
-
-	// ------------- Optional query parameter "type" -------------
-
-	err = runtime.BindQueryParameter("form", true, false, "type", r.URL.Query(), &params.Type)
-	if err != nil {
-		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "type", Err: err})
-		return
-	}
-
-	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		siw.Handler.GetV1(w, r, params)
-	}))
-
-	for _, middleware := range siw.HandlerMiddlewares {
-		handler = middleware(handler)
-	}
-
-	handler.ServeHTTP(w, r)
-}
-
-// PostV1Finish operation middleware
-func (siw *ServerInterfaceWrapper) PostV1Finish(w http.ResponseWriter, r *http.Request) {
-
-	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		siw.Handler.PostV1Finish(w, r)
-	}))
-
-	for _, middleware := range siw.HandlerMiddlewares {
-		handler = middleware(handler)
-	}
-
-	handler.ServeHTTP(w, r)
-}
-
-// PostV1Start operation middleware
-func (siw *ServerInterfaceWrapper) PostV1Start(w http.ResponseWriter, r *http.Request) {
-
-	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		siw.Handler.PostV1Start(w, r)
-	}))
-
-	for _, middleware := range siw.HandlerMiddlewares {
-		handler = middleware(handler)
-	}
-
-	handler.ServeHTTP(w, r)
-}
-
-type UnescapedCookieParamError struct {
-	ParamName string
-	Err       error
-}
-
-func (e *UnescapedCookieParamError) Error() string {
-	return fmt.Sprintf("error unescaping cookie parameter '%s'", e.ParamName)
-}
-
-func (e *UnescapedCookieParamError) Unwrap() error {
-	return e.Err
-}
-
-type UnmarshalingParamError struct {
-	ParamName string
-	Err       error
-}
-
-func (e *UnmarshalingParamError) Error() string {
-	return fmt.Sprintf("Error unmarshaling parameter %s as JSON: %s", e.ParamName, e.Err.Error())
-}
-
-func (e *UnmarshalingParamError) Unwrap() error {
-	return e.Err
-}
-
-type RequiredParamError struct {
-	ParamName string
-}
-
-func (e *RequiredParamError) Error() string {
-	return fmt.Sprintf("Query argument %s is required, but not found", e.ParamName)
-}
-
-type RequiredHeaderError struct {
-	ParamName string
-	Err       error
-}
-
-func (e *RequiredHeaderError) Error() string {
-	return fmt.Sprintf("Header parameter %s is required, but not found", e.ParamName)
-}
-
-func (e *RequiredHeaderError) Unwrap() error {
-	return e.Err
-}
-
-type InvalidParamFormatError struct {
-	ParamName string
-	Err       error
-}
-
-func (e *InvalidParamFormatError) Error() string {
-	return fmt.Sprintf("Invalid format for parameter %s: %s", e.ParamName, e.Err.Error())
-}
-
-func (e *InvalidParamFormatError) Unwrap() error {
-	return e.Err
-}
-
-type TooManyValuesForParamError struct {
-	ParamName string
-	Count     int
-}
-
-func (e *TooManyValuesForParamError) Error() string {
-	return fmt.Sprintf("Expected one value for %s, got %d", e.ParamName, e.Count)
-}
-
-// Handler creates http.Handler with routing matching OpenAPI spec.
-func Handler(si ServerInterface) http.Handler {
-	return HandlerWithOptions(si, StdHTTPServerOptions{})
-}
-
-// ServeMux is an abstraction of http.ServeMux.
-type ServeMux interface {
-	HandleFunc(pattern string, handler func(http.ResponseWriter, *http.Request))
-	ServeHTTP(w http.ResponseWriter, r *http.Request)
-}
-
-type StdHTTPServerOptions struct {
-	BaseURL          string
-	BaseRouter       ServeMux
-	Middlewares      []MiddlewareFunc
-	ErrorHandlerFunc func(w http.ResponseWriter, r *http.Request, err error)
-}
-
-// HandlerFromMux creates http.Handler with routing matching OpenAPI spec based on the provided mux.
-func HandlerFromMux(si ServerInterface, m ServeMux) http.Handler {
-	return HandlerWithOptions(si, StdHTTPServerOptions{
-		BaseRouter: m,
-	})
-}
-
-func HandlerFromMuxWithBaseURL(si ServerInterface, m ServeMux, baseURL string) http.Handler {
-	return HandlerWithOptions(si, StdHTTPServerOptions{
-		BaseURL:    baseURL,
-		BaseRouter: m,
-	})
-}
-
-// HandlerWithOptions creates http.Handler with additional options
-func HandlerWithOptions(si ServerInterface, options StdHTTPServerOptions) http.Handler {
-	m := options.BaseRouter
-
-	if m == nil {
-		m = http.NewServeMux()
-	}
-	if options.ErrorHandlerFunc == nil {
-		options.ErrorHandlerFunc = func(w http.ResponseWriter, r *http.Request, err error) {
-			http.Error(w, err.Error(), http.StatusBadRequest)
-		}
-	}
-
-	wrapper := ServerInterfaceWrapper{
-		Handler:            si,
-		HandlerMiddlewares: options.Middlewares,
-		ErrorHandlerFunc:   options.ErrorHandlerFunc,
-	}
-
-	m.HandleFunc("GET "+options.BaseURL+"/v1", wrapper.GetV1)
-	m.HandleFunc("POST "+options.BaseURL+"/v1/finish", wrapper.PostV1Finish)
-	m.HandleFunc("POST "+options.BaseURL+"/v1/start", wrapper.PostV1Start)
-
-	return m
-}
